tests/machine/x/zig/closure.error
Error on line 7: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/closure.zig:7:23: error: expected ',' after initializer

6:     return fn (x: i32) i32 {
7:         return (x + n);
8: };
